[gd_scene load_steps=7 format=2]

[ext_resource path="res://Battle/image/icon/tac_arc_laser.png" type="Texture" id=1]
[ext_resource path="res://Battle/SklIcon.gd" type="Script" id=2]
[ext_resource path="res://font/m5x7.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 1, 1, 1 )
font_data = ExtResource( 3 )

[node name="SklIcon" type="TextureRect"]
margin_right = 26.0
margin_bottom = 26.0
texture = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarmUp" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 0, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WarmUp"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "6"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoolDown" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 1, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CoolDown"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "6"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_SklIcon_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_SklIcon_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SklIcon_mouse_exited"]
